Tidy up.