@@ -1,18 +1,23 @@
 package org.oddjob.beancmpr.beans;
 
-import java.util.Arrays;
-
 import junit.framework.TestCase;
-
+import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
 import org.oddjob.arooa.ArooaSession;
 import org.oddjob.arooa.standard.StandardArooaSession;
 import org.oddjob.beancmpr.SharedTestData;
 import org.oddjob.beancmpr.SharedTestData.Fruit;
 import org.oddjob.beancmpr.composite.DefaultComparersByType;
+import org.oddjob.beancmpr.matchables.CompareResultsHandler;
 import org.oddjob.beancmpr.multiitem.MultiItemComparer;
 import org.oddjob.beancmpr.multiitem.MultiItemComparison;
+import org.oddjob.beancmpr.results.MatchResult;
+import org.oddjob.beancmpr.results.MatchResultHandlerFactory;
 import org.oddjob.beancmpr.results.MatchResultType;
-import org.oddjob.beancmpr.results.RowSetResultHandler;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 public class IterableBeansComparerTypeTest extends TestCase {
 	
@@ -22,19 +27,21 @@ public class IterableBeansComparerTypeTest extends TestCase {
 		
 		SharedTestData testData = new SharedTestData();
 		
-		IterableBeansComparerType<Fruit> test = 
-				new IterableBeansComparerType<Fruit>();
+		IterableBeansComparerType<Fruit> test =
+				new IterableBeansComparerType<>();
 		
 		test.setArooaSession(session);
 		
 		test.setKeys(new String[] { "id" });
 		test.setValues(new String[] { "type", "quantity", "colour" });
-		
-		RowSetResultHandler results = 
-				new RowSetResultHandler();
-		
+
+		List<MatchResult> results = new ArrayList<>();
+
+		CompareResultsHandler handler = MatchResultHandlerFactory
+				.handlerTo(results::add);
+
 		IterableBeansComparer<Fruit> comparer = test.createComparerWith(
-				new DefaultComparersByType(), results);
+				new DefaultComparersByType(), handler);
 		
 		MultiItemComparison<Iterable<Fruit>> comparison = 
 				comparer.compare(testData.getListFruitX(), testData.getListFruitY());
@@ -45,50 +52,43 @@ public class IterableBeansComparerTypeTest extends TestCase {
 		assertEquals(2, comparison.getDifferentCount());
 		assertEquals(1, comparison.getXMissingCount());
 		assertEquals(1, comparison.getYMissingCount());
+
+		assertEquals(MatchResultType.NOT_EQUAL, results.get(0).getResultType());
+		assertEquals(1L, results.get(0).getKey(0));
 		
-		assertEquals(true, results.next());
+		assertEquals("Apple", results.get(0).getComparison(0).getX());
+		assertEquals("Apple", results.get(0).getComparison(0).getY());
+		assertEquals(0, results.get(0).getComparison(0).getResult());
 		
-		assertEquals(MatchResultType.NOT_EQUAL, results.getResultType());
-		assertEquals(new Long(1), results.getKey(0));
+		assertEquals(4, results.get(0).getComparison(1).getX());
+		assertEquals(4, results.get(0).getComparison(1).getY());
+		assertEquals(0, results.get(0).getComparison(1).getResult());
 		
-		assertEquals("Apple", results.getComparison(0).getX());
-		assertEquals("Apple", results.getComparison(0).getY());
-		assertEquals(0, results.getComparison(0).getResult());
+		assertEquals("green", results.get(0).getComparison(2).getX());
+		assertEquals("red", results.get(0).getComparison(2).getY());
+		assertEquals(true, results.get(0).getComparison(2).getResult() != 0);
+		assertEquals("green<>red", results.get(0).getComparison(2).getSummaryText());
 		
-		assertEquals(4, results.getComparison(1).getX());
-		assertEquals(4, results.getComparison(1).getY());
-		assertEquals(0, results.getComparison(1).getResult());
+		assertEquals(MatchResultType.NOT_EQUAL, results.get(1).getResultType());
+		assertEquals(Long.valueOf(2), results.get(1).getKey(0));
 		
-		assertEquals("green", results.getComparison(2).getX());
-		assertEquals("red", results.getComparison(2).getY());
-		assertEquals(true, results.getComparison(2).getResult() != 0);
-		assertEquals("green<>red", results.getComparison(2).getSummaryText());
+		assertEquals(0, results.get(1).getComparison(0).getResult());
 		
-		assertEquals(true, results.next());
+		assertEquals(3, results.get(1).getComparison(1).getX());
+		assertEquals(4, results.get(1).getComparison(1).getY());
+		assertEquals(true, results.get(1).getComparison(1).getResult() != 0);
+		assertEquals("3<>4", results.get(1).getComparison(1).getSummaryText());
 		
-		assertEquals(MatchResultType.NOT_EQUAL, results.getResultType());
-		assertEquals(new Long(2), results.getKey(0));
+		assertEquals(0, results.get(1).getComparison(2).getResult());
 		
-		assertEquals(0, results.getComparison(0).getResult());
-		
-		assertEquals(3, results.getComparison(1).getX());
-		assertEquals(4, results.getComparison(1).getY());
-		assertEquals(true, results.getComparison(1).getResult() != 0);
-		assertEquals("3<>4", results.getComparison(1).getSummaryText());
-		
-		assertEquals(0, results.getComparison(2).getResult());
-		
-		assertEquals(true, results.next());
-		
-		assertEquals(MatchResultType.X_MISSING, results.getResultType());
-		assertEquals(new Long(3), results.getKey(0));
-		
-		assertEquals(true, results.next());
-		
-		assertEquals(MatchResultType.Y_MISSING, results.getResultType());
-		assertEquals(new Long(5), results.getKey(0));
-		
-		assertEquals(false, results.next());
+
+		assertEquals(MatchResultType.X_MISSING, results.get(2).getResultType());
+		assertEquals(Long.valueOf(3), results.get(2).getKey(0));
+
+		assertEquals(MatchResultType.Y_MISSING, results.get(3).getResultType());
+		assertEquals(Long.valueOf(5), results.get(3).getKey(0));
+
+		MatcherAssert.assertThat(results.size(), Matchers.is(4));
 	}
 	
 	public void testCompareListOfFruitKeyedOnNoneUniqueTypeWithAdditionalValue() {
@@ -97,8 +97,8 @@ public class IterableBeansComparerTypeTest extends TestCase {
 		
 		SharedTestData testData = new SharedTestData();
 		
-		IterableBeansComparerType<Fruit> test = 
-				new IterableBeansComparerType<Fruit>();
+		IterableBeansComparerType<Fruit> test =
+				new IterableBeansComparerType<>();
 		
 		test.setArooaSession(session);
 		
